cambio color navbar (una linea de commit :p)

--- a/src/test/resources/ui/listado-consultas.css
+++ b/src/test/resources/ui/listado-consultas.css
@@ -25,7 +25,7 @@ body {
 a {
     display: table;
     padding: 8px;
-    background-color:  #2980b9;
+    background-color:  #e8edd4;
 }
 
 .footer {
