hago el controller de terminal

--- a/src/test/resources/templates/terminal.hbs
+++ b/src/test/resources/templates/terminal.hbs
@@ -1,3 +1,6 @@
+
+{{>navBar.hbs}}
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -76,12 +79,6 @@
 	}
 	</script>
 
-  
-  <footer class="footer">
-     <p class="text-center">
-       &copy; 2016 UTN FRBA
-     </p>
- </footer>
   
  </body>
 </html>
