--- a/src/test/resources/templates/navBar.hbs
+++ b/src/test/resources/templates/navBar.hbs
@@ -14,7 +14,7 @@
       <div>
         <ul class="nav navbar-nav">
           <li><a href="/pois">Administrar Pois</a></li>
-          <li><a href="/terminales">Administrar Terminales</a></li>
+          <li><a href="/terminal">Administrar Terminales</a></li>
         </ul>
       </div>
     </div>
