--- a/src/test/resources/ui/listado-consultas.css
+++ b/src/test/resources/ui/listado-consultas.css
@@ -51,7 +51,7 @@ h1,h2,h3 {
     text-align: center;
 }
 
-.botonBuscar {
+.botonBuscar, .botonWarning, .botonFeliz {
     background-color: #008CBA; /* Blue */
     border: none;
     color: white;
@@ -62,6 +62,13 @@ h1,h2,h3 {
     font-size: 16px;
 }
 
+.botonFeliz{
+        background-color: #00BA00;
+}
+
+.botonWarning{
+        background-color: #992244;
+}
 h1,h2,h3,h4,h5,h6
 {
 	margin: 0 0 .5em;
