agrego botonsito a terminal

--- a/src/test/resources/templates/terminal.hbs
+++ b/src/test/resources/templates/terminal.hbs
@@ -33,13 +33,14 @@
 			   <tr>
 			   	   <th>Terminal</th>
 				   <th>Nombre</th>
-				   <th></th>
+				   <th>Seleccionar</th>
 			   </tr>
 		
 			   {{#each terminales}}
 			   <tr>
 				   <td>{{numeroTerminal}}</td>
 				   <td>{{nombre}}</td>
+				   <td><input type="checkbox"></td>
 			  </tr>
 		      {{/each}}
 		</table>
