--- a/src/test/resources/templates/altaTerminal.hbs
+++ b/src/test/resources/templates/altaTerminal.hbs
@@ -1,8 +1,12 @@
+
+{{>navBar.hbs}}
+
+
 <!DOCTYPE html>
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="listado-consultas.css" media="screen" />
-  <title>POIS</title>
+  <title>Terminal</title>
 </head>
 
    <div>    </div>
@@ -26,13 +30,6 @@
 	<br>
     	<button class="botonAgregar" value="AGREGAR"/>AGREGAR</button>
     </div> 
-
-  
-  <footer class="footer">
-     <p class="text-center">
-       &copy; 2016 UTN FRBA
-     </p>
- </footer>
   
  </body>
 </html>
