--- a/src/test/resources/templates/historico-consultas.hbs
+++ b/src/test/resources/templates/historico-consultas.hbs
@@ -43,34 +43,17 @@
   		 <div class="wrapper">
   	  	  <div class="table table-stripped">
   	   	    <div class="row header">
-     	 	   <div class="cell">ID</div>
      		   <div class="cell"> Fecha</div>
      	 	   <div class="cell">Pois&nbspEncontrados </div>
-     	 	   <div class="cell">Terminal </div>
             </div>
-
+			
+			{{each busqueda}}
   	      <div class="row">
-              <div class="cell"> 0001 </div>
-    	      <div class="cell"> 25/03/2016 </div>
-       		  <div class="cell"> 14 </div>
-      		  <div class="cell"> 1 </div>
+    	      <div class="cell"> {{busqueda.fecha}}</div>
+       		  <div class="cell"> {{busqueda.pois}} </div>
  	 	 </div>
-		 
-		 <div class="row">
-              <div class="cell"> 0002 </div>
-    	      <div class="cell"> 08/07/2016 </div>
-       		  <div class="cell"> 25 </div>
-      		  <div class="cell"> 2 </div>
- 	 	 </div>
-		 
-		 
-		 
-		 <div class="row">
-              <div class="cell"> 0003 </div>
-    	      <div class="cell"> 10/11/2016 </div>
-       		  <div class="cell"> 26 </div>
-      		  <div class="cell"> 3 </div>
- 	 	 </div>
+		 {{/each}}
+		
 		 
 		 
 		 </div>
