--- a/src/test/resources/templates/historico-consultas.hbs
+++ b/src/test/resources/templates/historico-consultas.hbs
@@ -50,7 +50,7 @@
 			{{each busqueda}}
   	      <div class="row">
     	      <div class="cell"> {{busqueda.fecha}}</div>
-       		  <div class="cell"> {{busqueda.pois}} </div>
+       		  <div class="cell"> {{busqueda.cantidadPois}} </div>
  	 	 </div>
 		 {{/each}}
 		
