--- a/src/test/resources/templates/pois.hbs
+++ b/src/test/resources/templates/pois.hbs
@@ -6,30 +6,41 @@
  <head>
  <link rel="stylesheet" type="text/css" href="listado-consultas.css" media="screen" />
  	<title>POIS</title>
- </head>
+ </head>  
    
   <body>
 	<h1>Resultado Busqueda</h1>
 
 	<div class = "wrapper">
-	<table class="table table-stripped">
-		   <tr>
-		   	   <th class="row header">Nombre</th>
-			   <th class="row header">Direccion</th>
-			   <th class="row header">Calle</th>
-			   <th class="row header">Ubicacion</th>
-			   <th class="row header"></th>
+	<table class="table">
+		   <tr class="row header">
+		   	   <th class="cell">Nombre</th>
+			   <th class="cell">Calle</th>
+			   <th class="cell">Direccion</th>
+			   <th class="cell">Ubicacion</th>
 		   </tr>
 	
 		   {{#each pois}}
 		    <tr class="row">
 			   <td class="cell">{{nombre}}</td>
+			    <td class="cell">{{calle}}</td>
 			   <td class="cell">{{direccion}}</td>
-			   <td class="cell">{{calle}}</td>
 			   <td class="cell">{{ubicacion}}</td>
+			   <td> <button class="botonBuscar"> Ver&nbspMas </button> </td>
 		  </tr>
 	      {{/each}}
 	</table>
 	</div>
+	
+	
+	
+   <footer class="footer">
+     <p class="text-center">
+       &copy; 2016 UTN FRBA
+     </p>
+  </footer>
+	
   </body>
+  
+  
 </html>
