--- a/src/test/resources/templates/terminal.hbs
+++ b/src/test/resources/templates/terminal.hbs
@@ -30,7 +30,7 @@
   		 <br>
   		 
   		 <table class="table table-stripped" align="center">
-			   <tr>
+			   <tr class="tr header">
 			   	   <th>Terminal</th>
 				   <th>Nombre</th>
 				   <th>Seleccionar</th>
