--- a/src/test/resources/templates/listado-consultas.css
+++ b/src/test/resources/templates/listado-consultas.css
@@ -144,7 +144,21 @@ Layout styles
   width: 90%;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
   display: table;
+  text-align: center;
 }
+
+tr:nth-child(even) {background-color: #f2f2f2}
+
+th, td {
+    padding: 15px;
+    text-align: left;
+}
+
+.tr.header {
+    background-color: #2E9AFE;
+    color: white;
+}
+
 @media screen and (max-width: 580px) {
   .table {
     display: block;
