--- a/src/test/resources/ui/administrarPoi/navBar.hbs
+++ b/src/test/resources/ui/administrarPoi/navBar.hbs
@@ -13,7 +13,7 @@
       </div>
       <div>
         <ul class="nav navbar-nav">
-          <li><a href="/poi">Administrar Pois</a></li>
+          <li><a href="/administrar-pois">Administrar Pois</a></li>
           <li><a href="/terminal">Administrar Terminales</a></li>
           <li><a href="/historico-consultas">Historial Consultas</a></li>
         </ul>
