empiezo con historial de consultas

--- a/src/test/resources/templates/historico-consultas.hbs
+++ b/src/test/resources/templates/historico-consultas.hbs
@@ -43,8 +43,8 @@
 			
 			{{#each busqueda}}
   	      <div class="row">
-    	      <div class="cell"> {{busqueda.fecha}}</div>
-       		  <div class="cell"> {{busqueda.cantidadPois}} </div>
+    	      <div class="cell"> {{fecha}}</div>
+       		  <div class="cell"> {{cantidadPois}} </div>
  	 	 </div>
 		 {{/each}}
 		
