dejo andando buscador de terminal x comuna

--- a/src/test/resources/templates/navBar.hbs
+++ b/src/test/resources/templates/navBar.hbs
@@ -14,7 +14,7 @@
       <div>
         <ul class="nav navbar-nav">
           <li><a href="/administrar-pois">Administrar Pois</a></li>
-          <li><a href="/terminal">Administrar Terminales</a></li>
+          <li><a href="/terminal?comuna=0">Administrar Terminales</a></li>
           <li><a href="/historico-consultas">Historial Consultas</a></li>
         </ul>
       </div>
