corrijo query param

--- a/src/test/resources/templates/terminal.hbs
+++ b/src/test/resources/templates/terminal.hbs
@@ -16,7 +16,7 @@
   
     <div>
     	<form action="/terminal" method="GET">	
-    		<input class="filterComuna" type="text" id="comuna" placeholder="comuna" size="25" max="10">
+    		<input class="passwd" type="text" id="comuna" name="comuna" placeholder="comuna" size="25" max="10">
 	  		<input class="botonIngresar" type="submit" value="BUSCAR">
 	  	</form>
     </div> 
