--- a/src/test/resources/templates/administrar-poi.hbs
+++ b/src/test/resources/templates/administrar-poi.hbs
@@ -19,8 +19,8 @@
   
     <div>
 	  <input class="filterComuna" type="text" id="textNombre" placeholder="nombre" size="25" max="10">
-          <input class="filterComuna" type="text" id="textNombre" placeholder="tipo" size="25" max="10">
     </div>
+    	{{>selectorTipo.hbs}}
     <div>
         <button class="botonBuscar" value="BUSCAR"/>Buscar</button>
     </div>
