--- a/src/test/resources/templates/perfil-terminal.hbs
+++ b/src/test/resources/templates/perfil-terminal.hbs
@@ -6,14 +6,18 @@
 <head>
    <title>POIS</title>
    
-  		<h3>PERFIL : Terminal</h3>
-		<div> <h3>Nombre: {{terminal.nombre}} Numero: {{terminal.numeroTerminal}} </h3> </div>
+  		<h4>PERFIL : Terminal</h4>
+		<div> <h4>Nombre: {{terminal.nombre}} Numero: {{terminal.numeroTerminal}} </h4> </div>
 		</head>
 <body>
 	<div> </div>
 		 
 	<h1>Busqueda de pois</h1>  
 	
+	<h2> Ingrese criterios de busqued</h2>
+	
+	<div> </div>
+	<div> </div>
 	<form action="/pois" method="GET" id="consulta">
 	    <div>
 	   <input class="passwd" type="text" name="nombre" placeholder="nombre" size="25" max="10">
@@ -22,10 +26,10 @@
 	
 	 <div>
 	  <h4>Tipo: <select name = "tipo" form = "consulta" >
-  	  		  <option value="negocio">Negocio</option>
-  	 		  <option value="colectivo">Estacion de Colectivo</option>
-  	 		  <option value="banco">Banco</option>
-  			  <option value="CGP">CGP</option>
+  	  		  <option value="Negocio">Negocio</option>
+  	 		  <option value="EstacionDeColectivo">Estacion de Colectivo</option>
+  	 		  <option value="Banco">Banco</option>
+  			  <option value="Cgp">CGP</option>
   	 		  </select>
 	  </h4>
 	 </div>
