--- a/src/test/resources/templates/administrar-poi.hbs
+++ b/src/test/resources/templates/administrar-poi.hbs
@@ -6,23 +6,20 @@
   <link rel="stylesheet" type="text/css" href="listado-consultas.css" media="screen" />
   <title>Administar pois</title>
 </head>
-  	<nav class = "navbar">
-     <ul class="main-menu ed-menu web-horizontal">
-		<li><a href="http://localhost:4567/">Inicio</a></li>
-	</ul>
-	</nav>
 
-   <div>    </div>
-   <div>    </div>
+	<br>
+	<br>
   <h1>Administar pois</h1>  
-  <body>
+  <body style="margin:50px 0; padding:0;text-align:center;">
   
     <div>
 	  <input class="filterComuna" type="text" id="textNombre" placeholder="nombre" size="25" max="10">
+	  {{>selectorTipo.hbs}}
     </div>
-    	{{>selectorTipo.hbs}}
     <div>
-        <button class="botonBuscar" value="BUSCAR"/>Buscar</button>
+    	<form action="/terminal" method="GET">	
+        	<input class="botonIngresar" type="submit" value="Buscar">
+        </form>
     </div>
     <br>
     <div>
