--- a/src/test/resources/templates/historico-consultas.hbs
+++ b/src/test/resources/templates/historico-consultas.hbs
@@ -27,7 +27,9 @@
     </div>
 	
     <div>
-    <button class="botonBuscar" value="BUSCAR"/>BUSCAR</button>
+    <form action="/historico-consulta" method="GET">	
+         	<input class="botonIngresar" type="submit" value="Buscar">
+    </form>
     </div>
 	
 	<div>    </div>
