avanzo alta terminal

--- a/src/test/resources/templates/terminal.hbs
+++ b/src/test/resources/templates/terminal.hbs
@@ -49,8 +49,10 @@
 		</table>
 		 
 		   <div>
-  	
-    		<button class="botonAgregar" value="AGREGAR" onClick=abrirAgregarTerminal()/>AGREGAR</button>
+  			<form action="/altaTerminal" method="GET">	
+	  			<input class="botonIngresar" type="submit" value="ALTA">
+    		</form>
+    		
     		<button class="botonEditar" value="EDITAR"/>EDITAR</button>
    			<button class="botonEliminar" value="ELIMINAR"/>ELIMINAR</button>
    			
