--- a/src/test/resources/templates/altaTerminal.hbs
+++ b/src/test/resources/templates/altaTerminal.hbs
@@ -9,27 +9,33 @@
   <title>Terminal</title>
 </head>
 
-   <div>    </div>
-   <div>    </div>
+   <br><br>
+   
   <h1>ALTA TERMINAL</h1>  
-  <body>
+  <body style="text-align:center";>
   
-    <div>
+    <form action="/altaTerminal" method="POST">	
+    
     	Nombre: 
-	  <input class="filterComuna" type="text" id="textNombre" placeholder="nombre" size="25" max="10">
+	  <input class="filterComuna" type="text" id="textNombre" placeholder="nombre" name="nombre" size="25" max="10">
 	  <br>
 		Comuna: 	 
-	  <input class="filterComuna" type="text" id="textComuma" placeholder="comuna" size="25" max="10">
+	  <input class="filterComuna" type="text" id="textComuma" placeholder="comuna" name="comuna" size="25" max="10">
 	  <br>
+	  <!--
 	  	Mails Activados: 
-	  <input class="filterComuna" type="checkbox" id="checkMailsActivados" checked>
+	  <input class="filterComuna" type="checkbox" id="checkMailsActivados" name="mailsCheck" checked>
 	  <br>
 	  	Registros Activados: 
-	  <input class="filterComuna" type="checkbox" id="checkRegistrosActivados" checked>
-	<br>
-	<br>
-    	<button class="botonAgregar" value="AGREGAR"/>AGREGAR</button>
-    </div> 
+	  <input class="filterComuna" type="checkbox" id="checkRegistrosActivados" name="registrosCheck" checked>
+		-->
+		<br>
+		<br>
+	
+	  <input class="botonIngresar" type="submit" value="AGREGAR">
+	  
+    </form>
+    
   
  </body>
 </html>
