--- a/src/test/resources/templates/terminal.hbs
+++ b/src/test/resources/templates/terminal.hbs
@@ -16,7 +16,7 @@
   
     <div>
     	<form action="/terminal" method="GET">	
-    		<input class="passwd" type="text" id="comuna" name="comuna" placeholder="comuna" size="25" max="10">
+    		<input class="passwd" type="text" id="comuna" value=0 name="comuna" placeholder="comuna" size="25" max="10">
 	  		<input class="botonIngresar" type="submit" value="BUSCAR">
 	  	</form>
     </div> 
@@ -43,7 +43,12 @@
 				   <td>{{numeroTerminal}}</td>
 				   <td>{{nombre}}</td>
 				   <td>{{numeroComuna}}</td>
-				   <td><input type="checkbox" id="checkSeleccion"></td>
+				   <td>
+				   		<form action="/modificarTerminal" method="GET">
+				   			<input type="hidden" name=nroTerminal value={{numeroTerminal}} >
+				   			<input type="submit" value="M">
+				   		</form>
+				   </td>
 			  </tr>
 		      {{/each}}
 		</table>
@@ -64,25 +69,8 @@
 	
 	<script>
 	
-	var table = document.getElementById("tablaTerminales");
-  	var tablerows = table.rows;
-  	
-  	for (var i=0, n=tablerows.length;i<n;i++) {
-    tablerows[i].onclick=function() {
-      alert(tablerows[i].textContent?tablerows[i].textContent:tablerows[i].innerText)
-    }
 	
-	function abrirAgregarTerminal() {
-	    window.open("/nuevaTerminal.html");
-	}
 	
-	function abrirEditarTerminal() {
-	    window.open("/modificarTerminal.html");
-	}
-	
-	function eliminarTerminal() {
-	    
-	}
 	</script>
 
   
