--- a/src/test/resources/templates/selectorTipo.hbs
+++ b/src/test/resources/templates/selectorTipo.hbs
@@ -1,9 +1,7 @@
-	 <div>
-	  <h4>Tipo: <select name = "tipo" form = "consulta" >
-  	  		  <option value="negocio">Negocio</option>
-  	 		  <option value="colectivo">Estacion de Colectivo</option>
-  	 		  <option value="banco">Banco</option>
+<h4>Tipo: <select name = "tipo" form = "consulta" >
+  	  		  <option value="Negocio">Negocio</option>
+  	 		  <option value="Colectivo">Estacion de Colectivo</option>
+  	 		  <option value="Banco">Banco</option>
   			  <option value="CGP">CGP</option>
   	 		  </select>
-	  </h4>
-	 </div>
+</h4>
