--- a/src/test/resources/templates/perfil-terminal.hbs
+++ b/src/test/resources/templates/perfil-terminal.hbs
@@ -26,6 +26,7 @@
 	
 	 <div>
 	  <h4>Tipo: <select name = "tipo" form = "consulta" >
+	  		  <option value="Todos">Todos</option>
   	  		  <option value="Negocio">Negocio</option>
   	 		  <option value="EstacionDeColectivo">Estacion de Colectivo</option>
   	 		  <option value="Banco">Banco</option>
