--- a/src/test/resources/templates/navBar.hbs
+++ b/src/test/resources/templates/navBar.hbs
@@ -13,7 +13,7 @@
       </div>
       <div>
         <ul class="nav navbar-nav">
-          <li><a href="/administrar-pois">Administrar Pois</a></li>
+          <li><a href="/administrar-pois?nombre=all">Administrar Pois</a></li>
           <li><a href="/terminal?comuna=0">Administrar Terminales</a></li>
           <li><a href="/historico-consultas">Historial Consultas</a></li>
         </ul>
