update terminal hbs

--- a/src/test/resources/templates/modificarTerminal.hbs
+++ b/src/test/resources/templates/modificarTerminal.hbs
@@ -19,11 +19,11 @@
     <br>
     	<table align="center" cellspacing="10">
 	    	<tr>
-	    		<td>Nombre anterior</td>
+	    		<td>Nombre anterior: </td>
 	    		<td> {{nombre}} </td>
 	    	</tr>
 	    	<tr>
-		  		<td>Comuna anterior</td>
+		  		<td>Comuna anterior: </td>
 	    		<td> {{numeroComuna}} </td>
 		  	</tr>
 		  	<tr>
