--- a/src/test/resources/templates/administrar-poi.hbs
+++ b/src/test/resources/templates/administrar-poi.hbs
@@ -14,7 +14,7 @@
   
 	  {{>selectorTipo.hbs}}
     
-    	<form action="/administrar-poi" method="GET">	
+    	<form action="/administrar-pois" method="GET">	
 	 		<input class="filterComuna" name="nombre" type="text" id="textNombre" placeholder="nombre" size="25" max="10">
         	<input class="botonIngresar" type="submit" value="Buscar">
         </form>
