cambios para testear mas facil

--- a/src/test/resources/templates/administrar-poi.hbs
+++ b/src/test/resources/templates/administrar-poi.hbs
@@ -36,7 +36,7 @@
 			   <tr class="row">
 				   <td>{{nombre}}</td>
 				   <td>{{direccion}}</td>
-				   <td>{{tipo}}</td>
+				   <td>{{poi_tipo}}</td>
 				   <td>
 				   		<form action="/editar-poi" method="GET">
 				   			<input type="hidden" name=poiId value={{poiId}} >
