Funca la busqueda de pois por nombre y tipo

--- a/src/test/resources/templates/perfil-terminal.hbs
+++ b/src/test/resources/templates/perfil-terminal.hbs
@@ -6,7 +6,7 @@
 <head>
    <title>POIS</title>
    
-  		<h4>PERFIL : Terminal</h4>
+  		<div><h4>PERFIL : Terminal</h4></div>
 		<div> <h4>Nombre: {{terminal.nombre}} Numero: {{terminal.numeroTerminal}} </h4> </div>
 		</head>
 <body>
@@ -14,7 +14,7 @@
 		 
 	<h1>Busqueda de pois</h1>  
 	
-	<h2> Ingrese criterios de busqued</h2>
+	<h2> Ingrese criterios de busqueda</h2>
 	
 	<div> </div>
 	<div> </div>
